--- a/how-to/contributing/index.html
+++ b/how-to/contributing/index.html
@@ -575,7 +575,12 @@
 ruff format .
 </code></pre>
 <h2 id="testing">Testing</h2>
-<p>Make sure that any extensions/improvement/changes you propopse to Qonscious are covered by unit tests.</p>
+<p>Make sure that any extensions/improvement/changes you contribute are covered by unit tests.</p>
+<p>Mark test methods that interact with IBM's backend (thus requiring a token) with the annotation <code>@pytest.mark.ibm_token_required</code></p>
+<p>Use:
+* <code>pytest</code> : to run all tests
+* <code>pytest -m "not ibm_token_required"</code> : to only run tests that to not interact with IBM's backend
+* <code>pytest -m "ibm_token_required"</code> : to only run tests that that do interact with IBM's backend</p>
 <h2 id="visualstudio-code">VisualStudio Code</h2>
 <p>There is a _vscode_example_settings.json file that you can rename to .vscode/settings.json . It provides most default settings that help VSC find tests, work with notebooks, etc. </p>
 <h1 id="keep-documentation-up-to-date">Keep documentation up to date</h1>
