deploy: 2695ce922454bff0607c46349eb3f360a6bf15a2

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 <li>Explanations/Design: (coming soon)</li>
 </ul>
 <h1 id="qonscious">Qonscious</h1>
-<p><a href="https://github.com/&lt;OWNER&gt;/&lt;REPO&gt;/actions/workflows/ci.yml"><img alt="CI" src="https://github.com/&lt;OWNER&gt;/&lt;REPO&gt;/actions/workflows/ci.yml/badge.svg?branch=main" /></a></p>
+<p><a href="https://github.com/lifia-unlp/qonscious/actions/workflows/ci.yml"><img alt="CI" src="https://github.com/lifia-unlp/qonscious/actions/workflows/ci.yml/badge.svg?branch=main" /></a></p>
 <p><strong>Qonscious</strong> is a runtime framework designed to support conditional execution of quantum circuits based on resource introspection. It helps you build quantum applications that are aware of backend conditions — such as entanglement, coherence, or fidelity — before execution.</p>
 <h2 id="why-qonscious">Why Qonscious?</h2>
 <p>In the NISQ era, quantum hardware is noisy, resource-limited, and variable over time. Static resource assumptions lead to unreliable results. <strong>Qonscious</strong> makes quantum programs introspective and adaptive.</p>
