deploy: 048cbd7b5e303bf0086a4c2471395d9994d6f492

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 <h1 id="project-overview">Project overview</h1>
 <ul>
 <li>Tutorials: <ul>
-<li><a href="tutorials/understanding-run-conditionally/">Undertanding run_conditionally</a></li>
+<li><a href="tutorials/understanding-run-conditionally/">Understanding run_conditionally</a></li>
 <li><a href="tutorials/qonscious-notebooks/">Qonscious notebooks</a>    </li>
 </ul>
 </li>
