--- a/tutorials/understanding-run-conditionally/index.html
+++ b/tutorials/understanding-run-conditionally/index.html
@@ -526,7 +526,8 @@
 
   <h1>run_conditionally</h1>
 
-
+<p>To be completed</p>
+<p>The (section on run_conditionally)[https://lifia-unlp.github.io/qonscious/reference/#conditionally-running-circuits] of the API documentation should be enough for now </p>
 
 
 
